<resources>
    <string name="app_name">Lesson_6</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Created_Notes">Создать заметку</string>
    <string name="back">Back</string>
    <string name="next_note">next note</string>
    <string name="about">about</string>
    <string name="exit">exit</string>
    <string name="fragment_activity_menu">Fragment activity Menu</string>
    <string name="add_new_note">Add new Note</string>
    <string name="click_on_the_button">click on the button</string>
    <string name="clear">Clear</string>
    <string name="button_popup">button popup</string>
    <string name="showToast">Показать Toast</string>
    <string name="showSnackbar">Показать SnackBar</string>
    <string name="ShowSnackBarWithAction">показать SnackBarWithAction</string>
    <string name="ShowAlertDialog">показать AlertDialog</string>
    <string name="showAlertDialogCustom">показать ShowAlertDialogCustom</string>
    <string name="show_toast">Show Toast</string>
    <string name="DialogFragment">Показать DialogFragment</string>
    <string name="DialogFragmentCustom">Показать DialogFragmentCustom</string>
    <string name="PushNotification">Показать PushNotification</string>
    <string name="BottomSheetDialogFragment">Показать BottomSheetDialogFragment</string>


</resources>