<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".NoteFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnToast"
        android:text="@string/showToast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSnackBar"
        android:text="@string/showSnackbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSnackBarWithAction"
        android:text="@string/ShowSnackBarWithAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAlertDialog"
        android:text="@string/ShowAlertDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAlertDialogCustom"
        android:text="@string/showAlertDialogCustom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>